less/home-page.less
.home{
    background: url(/images/tacos-bg.jpg) no-repeat scroll center top;
    background-size: 165%;
    background-attachment: fixed;
    background-position: top;

    @media @tablet{
        background-size: 100%;
    }//tablet

    @media @desktop{
        background-position: 0 70%;
    }//desktop
}

.top-content{
    margin-top: 18%;
    margin-left: 12.5%;
    width: 75%;
    display: flex;
    flex-direction: column;
    text-align: center;
    align-items: center;
    color: cornsilk;
    padding: 3rem;
    background: rgba(1, 1, 1, 0.5);
    margin-bottom: none;

    @media @tablet{
        width: 65%;
        margin-left: 17.5%;
        margin-top: 15%;
    }//tablet

    @media @desktop{
        width: 50%;
        margin-left: 25%;
        margin-top: 10%;
    }//desktop

    h1{
        border-top: cornsilk solid 1px;
        border-bottom: cornsilk solid 1px;
        margin: 1rem;
        padding: 1rem
    }//h1

    p{
        margin: 3.5rem 0;

        @media @tablet{
            font-size: 2rem;
        }//tablet
    }

    hr{
        width: 175px;
        border-top: 1px solid cornsilk;
        border-bottom: none;
    }//hr

    button{
        margin: 2rem 0 0 0;
        color: cornsilk;
        text-decoration: none;
        padding: 1.3rem 2.5rem;
        background: none;
        border: 1px solid cornsilk;
    }//button

    button:hover{
        background: rgba(158, 158, 158, 0.5);
    }//button:hover

    button:active{
        background: rgba(255, 255, 255, 0.5);
        color: black;
    }//button:hover
}//.top-content

.bottom-content{
    display: flex;
    flex-direction: column;
    text-align: center;
    align-items: center;
    margin-bottom: 2rem;
    padding-top: 3rem;
    color: cornsilk;
    background: rgba(1, 1, 1, 0.5);
    margin-top: none;
    margin-left: 12.5%;
    width: 75%;

    @media @tablet{
        width: 65%;
        margin-left: 17.5%;
    }//tablet

    @media @desktop{
        width: 50%;
        margin-left: 25%;
    }//desktop
    
    section{
        margin: 2rem;
    }//section

    img{
        width: 15%;
    }

    p{
        @media @tablet{
            font-size: 2rem;
        }//tablet
    }//p
}//.bottom-content

